--- a/Src/LanguageEfficiencySystem.Console/LanguageEfficiencySystem.Console.csproj
+++ b/Src/LanguageEfficiencySystem.Console/LanguageEfficiencySystem.Console.csproj
@@ -9,11 +9,12 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\LanguageEfficiencySystem\LanguageEfficiencySystem.csproj"/>
+        <ProjectReference Include="..\LanguageEfficiencySystem\LanguageEfficiencySystem.csproj" />
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Spectre.Console" Version="0.47.0"/>
+        <PackageReference Include="Microsoft.Extensions.Hosting" Version="7.0.1" />
+        <PackageReference Include="Spectre.Console" Version="0.47.0" />
     </ItemGroup>
 
 </Project>
